# AgentSystemsPlatformComparison

./: README.md
evacuation/: Cargo.toml  Dockerfile  run.py  visualisation_config.csv
evacuation/src/: basics.rs  config.rs  evacuation.rs  main.rs
game_of_life/: Cargo.toml  Dockerfile  run.py
game_of_life/src/: basics.rs  game_of_life.rs  main.rs
