[package]
name = "evacuation"
version = "0.1.0"
edition = "2024"
authors = ["Julian Górski"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.15.2", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
csv = { version = "1.3.1" }
rayon = "1.10.0"

[features]
headless = ["base"]
windowed = [
    "base", 
    "bevy/bevy_window",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
]
base = [
    "bevy/multi_threaded",
    "bevy/bevy_winit",
    "bevy/x11",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
